// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Grid Field Component renders a basic form 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
          style="margin-bottom: -5px;"
        >
          <div
            class="col-md-12"
          >
             
            <div
              class="row"
              style="margin-bottom: -5px;"
            >
              <div
                class="col-md-6"
              >
                 
                <span
                  data-testid="layout-grid-field__schema-field--first-name"
                >
                  <div
                    class="form-group field field-string"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="_firstName"
                      >
                        First name
                      </label>
                      <input
                        aria-describedby="_firstName__error _firstName__description _firstName__help"
                        class="form-control"
                        id="_firstName"
                        name="_firstName"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
              <div
                class="col-md-6"
              >
                 
                <span
                  data-testid="layout-grid-field__schema-field--last-name"
                >
                  <div
                    class="form-group field field-string"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="_lastName"
                      >
                        Last name
                      </label>
                      <input
                        aria-describedby="_lastName__error _lastName__description _lastName__help"
                        class="form-control"
                        id="_lastName"
                        name="_lastName"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="row"
              style="margin-bottom: -5px;"
            >
              <div
                class="col-md-6"
              >
                 
                <span
                  data-testid="layout-grid-field__schema-field--password"
                >
                  <div
                    class="form-group field field-string"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="_password"
                      >
                        Password
                      </label>
                      <input
                        aria-describedby="_password__error _password__description _password__help"
                        class="form-control"
                        id="_password"
                        name="_password"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
              <div
                class="col-md-6"
              >
                 
                <span
                  data-testid="layout-grid-field__schema-field--age"
                >
                  <div
                    class="form-group field field-integer"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="_age"
                      >
                        Age
                      </label>
                      <input
                        aria-describedby="_age__error _age__description _age__help"
                        class="form-control"
                        id="_age"
                        name="_age"
                        placeholder=""
                        step="1"
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="row"
              style="margin-bottom: -5px;"
            >
              <div
                class="col-md-12"
              >
                 
                <span
                  data-testid="layout-grid-field__schema-field--bio"
                >
                  <div
                    class="form-group field field-string"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="_bio"
                      >
                        Bio
                      </label>
                      <input
                        aria-describedby="_bio__error _bio__description _bio__help"
                        class="form-control"
                        id="_bio"
                        name="_bio"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Layout Grid Field Component renders a custom field 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
          style="margin-bottom: -5px;"
        >
          <span
            data-testid="layout-grid-field__schema-field--password"
          >
            <div>
              My Custom Component
            </div>
          </span>
          <span
            data-testid="layout-grid-field__schema-field--age"
          >
            <div
              class="form-group field field-integer"
            >
              <div
                class="form-group"
              >
                <label
                  class="form-label"
                  for="_age"
                >
                  Age
                </label>
                <input
                  aria-describedby="_age__error _age__description _age__help"
                  class="form-control"
                  id="_age"
                  name="_age"
                  placeholder=""
                  step="1"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Layout Grid Field Component renders a group column title 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
          style="margin-bottom: -5px;"
        >
          <div
            class="col-md-12"
          >
            <fieldset
              class="rjsf-layout-grid-group"
            >
              <span
                data-testid="layout-grid-field__col-title-field--biography"
              >
                <div>
                  <div
                    style="padding-bottom: 6px; margin-top: 8px; margin-bottom: 8px;"
                  >
                    <span
                      class="title"
                    >
                      Biography
                    </span>
                  </div>
                </div>
              </span>
              <div
                style="padding-left: 8px;"
              >
                <span
                  data-testid="layout-grid-field__schema-field--bio"
                >
                  <div
                    class="form-group field field-string"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="_bio"
                      >
                        Bio
                      </label>
                      <input
                        aria-describedby="_bio__error _bio__description _bio__help"
                        class="form-control"
                        id="_bio"
                        name="_bio"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Layout Grid Field Component renders a group column title which undefined 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
          style="margin-bottom: -5px;"
        >
          <div
            class="col-md-12"
          >
            <fieldset
              class="rjsf-layout-grid-group"
            >
              <span
                data-testid="layout-grid-field__col-title-field--"
              />
              <div
                style="padding-left: 8px;"
              >
                <span
                  data-testid="layout-grid-field__schema-field--bio"
                >
                  <div
                    class="form-group field field-string"
                  >
                    <div
                      class="form-group"
                    >
                      <label
                        class="form-label"
                        for="_bio"
                      >
                        Bio
                      </label>
                      <input
                        aria-describedby="_bio__error _bio__description _bio__help"
                        class="form-control"
                        id="_bio"
                        name="_bio"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </span>
              </div>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Layout Grid Field Component renders a group row title 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
          style="margin-bottom: -5px;"
        >
          <div
            class="col-md-12"
          >
             
            <div
              style="margin-bottom: -5px;"
            >
              <fieldset
                class="rjsf-layout-grid-group"
              >
                <span
                  data-testid="layout-grid-field__row-title-field--full-name"
                >
                  <div>
                    <div
                      style="padding-bottom: 6px; margin-top: 8px; margin-bottom: 8px;"
                    >
                      <span
                        class="title"
                      >
                        Full Name
                      </span>
                    </div>
                  </div>
                </span>
                <div
                  class="row"
                >
                  <div
                    class="col-md-6"
                  >
                     
                    <span
                      data-testid="layout-grid-field__schema-field--first-name"
                    >
                      <div
                        class="form-group field field-string"
                      >
                        <div
                          class="form-group"
                        >
                          <label
                            class="form-label"
                            for="_firstName"
                          >
                            First name
                          </label>
                          <input
                            aria-describedby="_firstName__error _firstName__description _firstName__help"
                            class="form-control"
                            id="_firstName"
                            name="_firstName"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="col-md-6"
                  >
                     
                    <span
                      data-testid="layout-grid-field__schema-field--last-name"
                    >
                      <div
                        class="form-group field field-string"
                      >
                        <div
                          class="form-group"
                        >
                          <label
                            class="form-label"
                            for="_lastName"
                          >
                            Last name
                          </label>
                          <input
                            aria-describedby="_lastName__error _lastName__description _lastName__help"
                            class="form-control"
                            id="_lastName"
                            name="_lastName"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Layout Grid Field Component renders a group row title which is undefined 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-object"
    >
      <div
        class="form-group"
      >
        <div
          class="row"
          style="margin-bottom: -5px;"
        >
          <div
            class="col-md-12"
          >
             
            <div
              style="margin-bottom: -5px;"
            >
              <fieldset
                class="rjsf-layout-grid-group"
              >
                <span
                  data-testid="layout-grid-field__row-title-field--"
                />
                <div
                  class="row"
                >
                  <div
                    class="col-md-6"
                  >
                     
                    <span
                      data-testid="layout-grid-field__schema-field--first-name"
                    >
                      <div
                        class="form-group field field-string"
                      >
                        <div
                          class="form-group"
                        >
                          <label
                            class="form-label"
                            for="_firstName"
                          >
                            First name
                          </label>
                          <input
                            aria-describedby="_firstName__error _firstName__description _firstName__help"
                            class="form-control"
                            id="_firstName"
                            name="_firstName"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                  <div
                    class="col-md-6"
                  >
                     
                    <span
                      data-testid="layout-grid-field__schema-field--last-name"
                    >
                      <div
                        class="form-group field field-string"
                      >
                        <div
                          class="form-group"
                        >
                          <label
                            class="form-label"
                            for="_lastName"
                          >
                            Last name
                          </label>
                          <input
                            aria-describedby="_lastName__error _lastName__description _lastName__help"
                            class="form-control"
                            id="_lastName"
                            name="_lastName"
                            placeholder=""
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;
